== 1.2.3
 * Fix Remote address spoofing vulnerability in Connection#remote_address [Alexey Borzenkov]
 * Fix uninitialized constant ActionController::Dispatcher error with Rails 1.2.3 [Chris Anderton] [#103 state:resolved]

== 1.2.2 I Find Your Lack of Sauce Disturbing release
 * Fix force kill under 1.9 [Alexey Chebotar]
 * Fix regression when --only option is used w/ --socket.
 * Add process name 'tag' functionality. Easier to distinguish thin daemons 
   from eachother in process listing [ctcherry]

== 1.2.1 Asynctilicious Ultra Supreme release
 * Require Rack 1.0.0
 * Require EventMachine 0.12.6
 * Use Rails Rack based dispatcher when available
 * Allow String for response body
 * Require openssl before eventmachine to prevent crash in 1.9

== 1.2.0 Asynctilicious Supreme release 
 * Add support for Windows mingw Ruby distro [Juan C. Rodriguez]
 * Add async response support, see example/async_*.ru [raggi]

== 1.1.1 Super Disco Power Plus release 
 * Fix bug when running with only options [hasimo]

== 1.1.0 Super Disco Power release
 * Require EventMachine 0.12.4
 * Remove Thin handler, now part of Rack 0.9.1
 * Fix Rack protocol version to 0.1 in environment hash.
 * Fix error when passing no_epoll option to a cluster.
 * Omit parsing #defined strings [Jérémy Zurcher]
 * Defaults SERVER_NAME to localhost like webrick does [#87 state:resolved]
 * Namespace parser to prevent error when mongrel is required [cliffmoon]
 * Set RACK_ENV based on environment option when loading rackup file [Curtis Summers] [#83 state:resolved]
 * Fixes a warning RE relative_url_root when using a prefix with Rails 2.1.1 [seriph] [#85 state:resolved]
 * --only can work as a sequence number (if < 80) or a port number (if >= 80) [jmay] [#81 state:resolved]

== 1.0.0 That's What She Said release
 * Fixed vlad.rake to allow TCP or socket [hellekin]
 * Updated Mack adapter to handle both <0.8.0 and >0.8.0 [Mark Bates]