@@ -1,4 +1,5 @@
 == 1.2.3
+ * Fix test for rack based Rails in adapter under Ruby >= 1.8.7 [#109 state:resolved]
  * Fix Remote address spoofing vulnerability in Connection#remote_address [Alexey Borzenkov]
  * Fix uninitialized constant ActionController::Dispatcher error with Rails 1.2.3 [Chris Anderton] [#103 state:resolved]
 
